log
Tue Mar 23 14:58:51 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘suma’:
exercises.c:15:6: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
    c = a + b;
      ^
cc1: all warnings being treated as errors
Compilation failed
Tue Mar 23 14:59:26 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
ae9fa07
Tue Mar 23 15:15:43 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
ce363d8
Tue Mar 23 15:35:40 UTC 2021: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 20/70
0716715
Tue Mar 23 15:47:25 UTC 2021: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 20/70
554fe6f
Tue Mar 23 15:48:00 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
3574684
Tue Mar 23 20:25:43 UTC 2021: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
4866c4d
Tue Mar 23 20:30:05 UTC 2021: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
f50cf82
Tue Mar 23 20:30:50 UTC 2021: 
 exercises.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  4|3
total_score: 40/70
46a7004
Tue Mar 23 20:46:00 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
cc471ff
Tue Mar 23 20:51:45 UTC 2021: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  4|3
total_score: 40/70
d74d982
Tue Mar 23 21:11:22 UTC 2021: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
3e4349b
